[tool.poetry]
name = "api"
version = "0.1.0"
description = "Hack a Team's API for ABRTA Hackathon"
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.44.1", extras = ["all"]}
sqlalchemy = "^1.3"
pyrbi = "^0.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.10"
pylint = "^2.4"
pre-commit = "^1.20"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
